--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,18 +3,26 @@
 ###############################################
 
 ---
-name: GitHub's Super Linter
-on: push
+name: Mr Coxall's Super Linter
+on: [push, pull_request]
 
 jobs:
   run-linters:
-    name: GitHub's Super Linter
+    name: Mr Coxall's Super Linter
     runs-on: ubuntu-latest
 
     steps:
       - name: Check out Git repository
         uses: actions/checkout@master
-        
+
+      - name: Prettify code
+        uses: creyD/prettier_action@master
+        with:
+          # run Prettier and see if it passes
+          dry: True
+          #prettier_options: --write **/*.{js,md}
+          github_token: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
+
       - name: Run GitHub Super Linter
         uses: github/super-linter@main
         env:
